bridge/base/0-pintel-api-namespace.yaml
#! 0-pintel-api-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: pintel-api
    labels:
        com.docker.compose.project: pintel_api
