bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: pintel-api
    labels:
        com.docker.compose.project: pintel_api
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: pintel_api
        com.docker.compose.service: api
    ports:
        - name: api-5000
          port: 5000
          protocol: TCP
          targetPort: api-5000
